<?xml version="1.0"?>
<package format="3">
  <name>pc2_to_laserscan</name>
  <version>0.1.0</version>
  <description>PointCloud2 -> LaserScan converter (C++ and Python nodes).</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>                               
    <build_type>ament_cmake</build_type> 
  </export> 
</package>
